# moltap

./: .gitignore  CHANGELOG.md  README.md  build.sh  moltap.cabal
doc-src/: common-knowledge.txt  conclusion.txt  counter-models.txt  download.txt  examples.txt  group-knowledge.txt  implementation-model.txt  implementation-tableaux.txt  implementation.txt  index.txt  prover.txt  references.txt  related-work.txt  soundness.txt  syntax.txt  tableaux-modal.txt  tableaux-propositional.txt  tableaux-system.txt  template.html  theory.txt  users-guide.tex  users-guide.txt
doc-src/style/: script.js  style.css
src/Moltap/: Examples.hs
src/Moltap/Base/: Agents.hs  Model.hs  Parser.hs  Proof.hs
src/Moltap/CGI/: CGIMain.hs  HTMLOutput.hs
src/Moltap/CLI/: CLIMain.hs
src/Moltap/Prover/: Prover.hs  SplitStateMonad.hs  TableauState.hs
src/Moltap/Util/: Graphviz.hs  SimpleJSON.hs  TreeZipper.hs  Util.hs
src/cgi/: CGIMain.hs
tools/: convert.pl  format.pl  format_tex.pl  morespace.sty  prelude.tex  proof.sty
