name:                  moltap
version:               0.3.0.0
cabal-version:         >= 1.8
build-type:            Simple
license:               GPL
license-file:          LICENSE
maintainer:            Twan van Laarhoven
author:                Twan van Laarhoven
category:              Theorem proving
synopsis:              MOLTAP - A Modal Logic Tableau Prover
description:
    MOLTAP - A Modal Logic Tableau Prover
    Proofs or disproves terms in modal and epistemic logics.
    Has a command line and a web interface.

extra-source-files:
    tools/convert.pl
    tools/format.pl
    tools/prelude.tex
    tools/proof.sty
    doc-src/template.html
    doc-src/style/style.css
    doc-src/style/script.js
    doc-src/style/jquery.js
    doc-src/style/textarea-bg.png
    doc-src/style/throbber.gif
    doc-src/style/true.png
    doc-src/style/circle-green.png
    doc-src/style/circle-red.png
    doc-src/style/error.png
    doc-src/style/false.png
    doc-src/style/header-bg.png
    doc-src/style/input-bg.png
    doc-src/index.txt
    doc-src/prover.txt
    doc-src/examples.txt
    doc-src/syntax.txt
    doc-src/users-guide.txt
    doc-src/download.txt


Library
    build-depends:
        base >= 4.5,
        containers,
        process,
        mtl,
        parsec,
        filepath,
        hashable
    If !os(windows)
        build-depends:      unix
        ghc-options:        -DUNIX
    hs-source-dirs:     src/library
    ghc-options:        -Wall
    extensions:         CPP
    exposed-modules:
        Moltap.Util.Util
        Moltap.Util.Graphviz
        Moltap.Util.TreeZipper
        Moltap.Base.Agents
        Moltap.Base.Syntax
        Moltap.Base.Parser
        Moltap.Base.Proof
        Moltap.Base.Model
        Moltap.Base.ModelGraphviz
        Moltap.Base.HTMLOutput
        Moltap.Prover.Prover
        Moltap.Prover.SplitStateMonad
        Moltap.Prover.TableauState

Flag include-cgi
    Description: Enable the CGI interface
    Default: True

Executable moltap-cgi
    If !flag(include-cgi)
        Buildable:        False
    build-depends:
        base >= 4.5,
        text,
        bytestring,
        base64-bytestring,
        aeson,
        wai >= 3.0,
        wai-extra >= 3.0,
        http-types,
        moltap
    main-is:            CGIMain.hs
    hs-source-dirs:     src/cgi
    ghc-options:        -Wall -optl-static -optl-pthread
    extensions:         CPP

Executable moltap
    build-depends:
        base >= 4.5,
        containers,
        moltap
    main-is:            CLIMain.hs
    hs-source-dirs:     src/cli
    ghc-options:        -Wall
    extensions:         CPP

